# depfresh

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/depfresh/: __init__.py  audit.py  cli.py  constraints.py  exceptions.py  models.py  reports.py  upgrade.py  uv.py  verify.py
src/depfresh/parsers/: __init__.py  _base.py  _helpers.py  _pipfile.py  _pyproject.py  _requirements.py
tests/: helpers.py  test_audit.py  test_cli.py  test_constraints.py  test_e2e.py  test_parsers.py  test_reports.py  test_smoke.py  test_upgrade.py  test_uv.py  test_verify.py
tests/fixtures/sample_projects/01_requirements_simple/: requirements.txt
tests/fixtures/sample_projects/02_requirements_hashed/: requirements.txt
tests/fixtures/sample_projects/03_requirements_in/: requirements.in
tests/fixtures/sample_projects/04_pyproject_pep621/: app.py  pyproject.toml
tests/fixtures/sample_projects/05_pyproject_poetry/: pyproject.toml
tests/fixtures/sample_projects/06_pipfile/: Pipfile
tests/fixtures/sample_projects/07_pyproject_pep621_optional/: app.py  pyproject.toml
tests/fixtures/sample_projects/08_pyproject_pep621_direct_ref/: app.py  pyproject.toml
